# internal/core/brand/dto/brand_dto.go
@@ -1,21 +1,24 @@
 package dto
 
+import "mime/multipart"
+
 type CreateBrandRequest struct {
-	Name        string  `json:"name" binding:"required,max=255"`
-	Photo       *string `json:"photo" binding:"omitempty,max=255"`
-	Description *string `json:"description" binding:"omitempty"`
-	IsActive    *bool   `json:"is_active" binding:"omitempty"`
+	Name        string                `form:"name" binding:"required,max=255"`
+	Photo       *multipart.FileHeader `form:"photo" binding:"omitempty"`
+	Description *string               `form:"description" binding:"omitempty"`
+	IsActive    *bool                 `form:"is_active" binding:"omitempty"`
 }
 
 type UpdateBrandRequest struct {
-	Name        *string `json:"name" binding:"omitempty,max=255"`
-	Photo       *string `json:"photo" binding:"omitempty,max=255"`
-	Description *string `json:"description" binding:"omitempty"`
-	IsActive    *bool   `json:"is_active" binding:"omitempty"`
+	Name        *string               `form:"name" binding:"omitempty,max=255"`
+	Photo       *multipart.FileHeader `form:"photo" binding:"omitempty"`
+	Description *string               `form:"description" binding:"omitempty"`
+	IsActive    *bool                 `form:"is_active" binding:"omitempty"`
 }
 
 type BrandResponse struct {
 	ID             uint64  `json:"id"`
+	Slug           string  `json:"slug"`
 	Name           string  `json:"name"`
 	Photo          *string `json:"photo,omitempty"`
 	Description    *string `json:"description,omitempty"`
